--- a/style.css
+++ b/style.css
@@ -45,7 +45,8 @@ body * {
 
 /* # = seletor de ID */
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
   height: 712px;
 
   /* aceita 4 valores: se um valor aplica para todos, se dois valores aplica a 1 cima/baixo 2 direita/esquerda se três valores aplica 1 acima, 2 esquerda/direita se as quatro 1 cima, 2 direita, 3 baixo e 4 esquerda */
