add animation and at rules

--- a/style.css
+++ b/style.css
@@ -93,11 +93,16 @@ body * {
   left: 0;
   z-index: 1;
   transform: translateY(-50%);
+  animation: slide-out 0.4s;
 }
 
 .light #switch button {
-  right: 0;
-  left: initial;
+  /* animation recebe nome da animação, tempo de execução e uma regra */
+  animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+  outline: 8px solid var(--highlight-color);
 }
 
 #switch span {
@@ -175,13 +180,32 @@ footer {
   font-size: 12px;
 }
 
-/* media queries */
-/* at rule */
+/* at rule: media queries */
+
 @media (min-width: 700px) {
   :root {
     --bg-url: url(./assets/bg-desktop.jpg);
   }
   .light {
     --bg-url: url(./assets/bg-mobile-light.jpg);
+  }
+}
+
+/* at rule: animations */
+@keyframes slide-in {
+  from {
+    left: 0;
+  }
+  to {
+    left: 50%;
+  }
+}
+
+@keyframes slide-out {
+  from {
+    left: 50%;
+  }
+  to {
+    left: 0;
   }
 }
