linkedin updated again

--- a/style.css
+++ b/style.css
@@ -47,14 +47,12 @@ body * {
 
 /* # = seletor de ID */
 #container {
-  width: 100%;
-  max-width: 588px;
-  height: 712px;
+  min-height: 100vh;
 
-  /* aceita 4 valores: se um valor aplica para todos, se dois valores aplica a 1 cima/baixo 2 direita/esquerda se três valores aplica 1 acima, 2 esquerda/direita se as quatro 1 cima, 2 direita, 3 baixo e 4 esquerda */
-  margin: 56px auto 0px;
-
-  padding: 0 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 #profile {
